--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@babel/core": "^7.1.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.1.0",
+    "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^1.0.0",
+    "css-loader": "^1.0.1",
     "eslint": "^6.0.1",
     "file-loader": "^4.0.0",
     "html-loader": "^0.5.5",
@@ -29,8 +30,9 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
-    "style-loader": "^0.23.0",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.4.1",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.1.1",
@@ -38,6 +40,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0"
   }
 }
