--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,4 @@
 {
-    "presets": ["@babel/env"],
-    "plugins": [
-        [
-          "@babel/plugin-proposal-class-properties"
-        ]
-    ]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": [["@babel/plugin-proposal-class-properties"]]
 }
