--- a/package.json
+++ b/package.json
@@ -1,47 +1,73 @@
 {
-  "name": "kevinboxugao.github.io",
+  "name": "KevinBoxuGao",
   "version": "1.0.0",
-  "description": "Personal Portfolio",
+  "description": "Portfolio website",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --mode production --config webpack.prod.config.js && webpack --mode production --config webpack.server.config.js",
+    "start": "webpack-dev-server --open --config webpack.dev.config.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KevinBoxuGao/KevinBoxuGao.github.io.git"
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "bower_components",
+      "shared"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
+    }
   },
   "author": "Kevin Gao",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.1.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^1.0.1",
+    "css-loader": "^1.0.0",
     "eslint": "^6.0.1",
+    "eslint-plugin-jest": "^23.0.3",
+    "eslint-plugin-react": "^7.14.2",
     "file-loader": "^4.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "jest-dom": "^4.0.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "react-hot-loader": "^4.3.11",
+    "sass": "^1.23.3",
     "sass-loader": "^8.0.0",
-    "style-loader": "^0.23.1",
+    "style-loader": "^0.23.0",
     "terser-webpack-plugin": "^1.4.1",
-    "webpack": "^4.40.2",
+    "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.15.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^5.0.1",
+    "react-transition-group": "^4.3.0"
   }
 }
