--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.0.1",
