--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production --config webpack.prod.config.js && webpack --mode production --config webpack.server.config.js",
-    "start": "webpack-dev-server --open --config webpack.dev.config.js"
+    "start": "webpack-dev-server --open --env.ENVIRONMENT=development --config webpack.dev.config.js --watch --watch-poll"
   },
   "jest": {
     "transform": {
@@ -33,6 +33,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^4.9.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "autoprefixer": "^9.6.1",
@@ -41,6 +42,7 @@
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^1.0.0",
+    "error-overlay-webpack-plugin": "^0.4.1",
     "eslint": "^6.0.1",
     "eslint-plugin-jest": "^23.0.3",
     "eslint-plugin-react": "^7.14.2",
@@ -53,11 +55,12 @@
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.3.11",
+    "react-hot-loader": "^4.12.20",
     "sass": "^1.23.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^0.23.0",
     "terser-webpack-plugin": "^1.4.1",
+    "typescript": "^3.8.3",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8",
@@ -65,7 +68,6 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.0.1",
