--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.0.1",
-    "react-transition-group": "^4.3.0"
+    "react-spring": "^8.0.27",
+    "react-visibility-sensor": "^5.1.1"
   }
 }
