--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.9.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "autoprefixer": "^9.6.1",
@@ -52,10 +51,11 @@
     "jest": "^24.9.0",
     "jest-dom": "^4.0.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.12.20",
+    "react-svg-loader": "^3.0.3",
     "sass": "^1.23.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^0.23.0",
@@ -63,15 +63,15 @@
     "typescript": "^3.8.3",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "react": "^16.12.0",
+    "framer-motion": "^1.10.3",
+    "react": "^16.13.1",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.0.1",
-    "react-spring": "^8.0.27",
     "react-visibility-sensor": "^5.1.1"
   }
 }
