--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^1.0.0",
     "error-overlay-webpack-plugin": "^0.4.1",
     "eslint": "^6.0.1",
